--- a/hiroki/html-google-homepage/stylesheet.css
+++ b/hiroki/html-google-homepage/stylesheet.css
@@ -19,3 +19,12 @@ section img {
   padding: 16px;
   border: 8px solid #000;
 }
+
+li {
+  display: inline-block;
+  padding: 20px 30px;
+}
+
+header > div {
+  text-align: right;
+}
