--- a/hiroki/html-google-homepage/stylesheet.css
+++ b/hiroki/html-google-homepage/stylesheet.css
@@ -11,6 +11,7 @@ section > div {
 section input {
   display: block;
   margin: 20px auto;
+  font-size: large;
 }
 
 section img {
@@ -21,6 +22,10 @@ section img {
 
 section button {
   display: inline-block;
+  padding: 10px;
+  border: none;
+  font-family: "メイリオ";
+  font-weight: lighter;
 }
 
 section img {
