--- a/hiroki/html-google-homepage/stylesheet.css
+++ b/hiroki/html-google-homepage/stylesheet.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 section {
   width: 100%;
   height: 600px;
@@ -27,9 +32,10 @@ section img {
 
 section button {
   display: inline-block;
+  height: 40px;
   padding: 10px;
   border: none;
-  font-family: "メイリオ";
+  font-family: sans-serif;
   font-weight: lighter;
 }
 
