--- a/hiroki/css-flex-box/stylesheet.css
+++ b/hiroki/css-flex-box/stylesheet.css
@@ -7,15 +7,11 @@ header {
   background-color: gray;
 }
 
-header > svg {
-  filter: brightness(0) invert(1);
-}
-
 div.headerContainer {
   display: flex;
   flex-direction: row;
-  width: 600px;
-  justify-content: space-around;
+  width: 100%;
+  justify-content: flex-start;
   align-items: center;
   height: 60px;
 }
@@ -29,8 +25,8 @@ div.headerContainer ul {
 }
 
 div.sectionContainer {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+  display: flex;
+  justify-content: center;
 }
 
 div.leftContainer {
@@ -44,6 +40,7 @@ div.leftContainer {
 div.rightContainer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .avatar {
@@ -57,8 +54,8 @@ div.rightContainer {
 div.footerContainer {
   display: flex;
   flex-direction: row;
-  width: 1000px;
-  justify-content: space-around;
+  width: 100%;
+  justify-content: center;
   align-items: center;
   height: 60px;
 }
